--- a/StoreApp/Pages/Cart.cshtml
+++ b/StoreApp/Pages/Cart.cshtml
@@ -5,7 +5,7 @@
     <div class="text-center display-6">
         cart
     </div>
-    <table class="table table-hover">
+    <table>
         <thead>
             <tr>
                 <th>Product</th>
