--- a/StoreApp/Pages/_ViewImports.cshtml
+++ b/StoreApp/Pages/_ViewImports.cshtml
@@ -5,3 +5,4 @@
 @using Microsoft.AspNetCore.Mvc.RazorPages
 @using Microsoft.AspNetCore.Mvc.Razor
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, StoreApp
