--- a/StoreApp/Views/Shared/_Layout.cshtml
+++ b/StoreApp/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
     </div>
     <footer>
         @RenderSection("Footer", false)
-        footer
+          <partial name="_Footer" />
     </footer>
     <script src="~/lib/jquery/jquery.min.js"></script>
     <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
