--- a/StoreApp/Views/Product/Index.cshtml
+++ b/StoreApp/Views/Product/Index.cshtml
@@ -9,14 +9,22 @@
    </div>
    <div class="col-md-9">
       <div class="row my-3">
-      @foreach (Product prd in Model.Products)
-      {
+         @foreach (Product prd in Model.Products)
+         {
 
-         <partial name="_ProductCart" model="@prd" />
+            <partial name="_ProductCart" model="@prd" />
 
-      }
+         }
+      </div>
+
+       <div class="text-center">
+            <div page-model="@Model?.Pagination" page-action="Index" page-classes-enabled="true" page-class="btn"
+                page-class-normal="btn-outline-warning" page-class-selected="btn-primary" class="btn-group">
+            </div>
+        </div>
+
+
    </div>
-</div>
 </div>
 @section Footer {
    <div>
