--- a/StoreApp/Views/Product/Get.cshtml
+++ b/StoreApp/Views/Product/Get.cshtml
@@ -8,7 +8,7 @@
          <h6 class="display-6">
             @Model.ProductName
          </h6>
-         <img class="img-fluid shadow ronded-3 my-3" src="@Model?.ImageUrl" alt="@Model.ProductName" />
+         <img class="img-fluid shadow ronded-3 p-5 my-3" src="@Model?.ImageUrl" alt="@Model.ProductName" />
          <p class="lead text-danger">@Model.Price.ToString("c")</p>
       </div>
 
@@ -24,8 +24,9 @@
          <form id = "@Model.ProductId" asp-page="/cart" method="post">
          <input type="hidden" asp-for="ProductId"/>
          <input type="hidden" name="returnUrl" value="@ViewContext.HttpContext.Request.PathAndQuery()" />
-         <button type="submit" class="btn btn-outline-primary">
+         <button type="submit" class="btn btn-outline-primary rounded-0">
             <i class="fa fa-cart-plus"></i>
+             Add To Cart
          </button>
          </form>
       <a class="btn btn-outline-primary" asp-controller="Product" asp-action="Index">
