--- a/StoreApp/Views/Account/Login.cshtml
+++ b/StoreApp/Views/Account/Login.cshtml
@@ -33,6 +33,10 @@
                 </button>
             </div>
         </form>
+        
+        <div>
+            If you don't have an account. Please click here to achieve <a asp-action="Register"> registration page.</a>
+        </div>
     </div>
     <div class="col-md-3"></div>
 </div>
