--- a/StoreApp/Areas/Admin/Views/User/Index.cshtml
+++ b/StoreApp/Areas/Admin/Views/User/Index.cshtml
@@ -26,7 +26,9 @@
                 <td></td>
               <td>
                <div class="btn-group">
-                 <a class="btn btn-sm btn-warning">Update</a>
+                  <a class="btn btn btn-warning rounded-0" asp-action="Update" asp-route-id="@user.UserName">
+                            <i class="fa fa-solid fa-edit"></i>
+                            Edit</a>
                     <a class="btn btn-sm btn-info">ResetPassword</a>
                     <a class="btn btn-sm btn-danger">Delete</a>
 
