--- a/StoreApp/Areas/Admin/Views/User/Index.cshtml
+++ b/StoreApp/Areas/Admin/Views/User/Index.cshtml
@@ -29,7 +29,9 @@
                   <a class="btn btn btn-warning rounded-0" asp-action="Update" asp-route-id="@user.UserName">
                             <i class="fa fa-solid fa-edit"></i>
                             Edit</a>
-                    <a class="btn btn-sm btn-info">ResetPassword</a>
+                      <a class="btn btn btn-info rounded-0" asp-action="ResetPassword" asp-route-id="@user.UserName">
+                            <i class="fa fa-solid fa-edit"></i>
+                            Reset Password</a>
                     <a class="btn btn-sm btn-danger">Delete</a>
 
                </div>
