--- a/StoreApp/Areas/Admin/Views/User/Index.cshtml
+++ b/StoreApp/Areas/Admin/Views/User/Index.cshtml
@@ -2,10 +2,15 @@
 
 
 <div class="text-center my-5">
-    <div class="display-6">Users</div>
+    <div class="display-6 border-bottom">Users</div>
 </div>
 
-
+<div class="d-flex justify-content-end">
+    <a asp-action="Create" class="btn btn-outline-success">
+        <i class="fa fa-solid fa-plus"></i>
+        Add User
+    </a>
+</div>
 
 <table>
     <thead>
@@ -17,29 +22,34 @@
 
         </tr>
     </thead>
-     <tbody>
-     @foreach(IdentityUser user in Model)
-     {
-           <tr>
-             <td>@user.Id</td>
+    <tbody>
+        @foreach (IdentityUser user in Model)
+        {
+            <tr>
+                <td>@user.Id</td>
                 <td>@user.UserName</td>
                 <td></td>
-              <td>
-               <div class="btn-group">
-                  <a class="btn btn btn-warning rounded-0" asp-action="Update" asp-route-id="@user.UserName">
+                <td>
+                    <div class="btn-group">
+                        <a class="btn btn btn-warning rounded-0" asp-action="Update" asp-route-id="@user.UserName">
                             <i class="fa fa-solid fa-edit"></i>
                             Edit</a>
-                      <a class="btn btn btn-info rounded-0" asp-action="ResetPassword" asp-route-id="@user.UserName">
+                        <a class="btn btn btn-info rounded-0" asp-action="ResetPassword" asp-route-id="@user.UserName">
                             <i class="fa fa-solid fa-edit"></i>
                             Reset Password</a>
-                    <a class="btn btn-sm btn-danger">Delete</a>
+                        <form method="post" asp-action="DeleteOneUser">
+                            <input type="hidden" name="UserName" value="@user.UserName" />
+                            <button type="submit" class="btn btn-danger rounded-0">
+                                <i class="fa fa-solid fa-trash"></i>
+                                Delete
+                            </button>
+                        </form>
+                    </div>
 
-               </div>
-
-              </td>
-           </tr>
-     }
+                </td>
+            </tr>
+        }
 
 
-     </tbody>
+    </tbody>
 </table>
