--- a/StoreApp/Views/Shared/_LoginMenu.cshtml
+++ b/StoreApp/Views/Shared/_LoginMenu.cshtml
@@ -2,7 +2,9 @@
  {
     <li class="nav-item">
           <a class="nav-link" aria-current="page" asp-area="Admin" asp-controller="Dashboard"
-            asp-action="Index">Admin</a>
+            asp-action="Index">
+             <i class="fa-solid fa-gear"></i>
+            Admin</a>
         </li>
 
  }
