--- a/StoreApp/Areas/Admin/Views/User/Index.cshtml
+++ b/StoreApp/Areas/Admin/Views/User/Index.cshtml
@@ -31,17 +31,18 @@
                  <td user-name="@user.UserName" user-role=""></td>
                 <td>
                     <div class="btn-group">
-                        <a class="btn btn btn-warning rounded-0" asp-action="Update" asp-route-id="@user.UserName">
+                        <a data-toggle="tooltip" data-placement="top" title="Edit" class="btn btn btn-warning rounded-0"
+                         asp-action="Update" asp-route-id="@user.UserName">
                             <i class="fa fa-solid fa-edit"></i>
-                            Edit</a>
-                        <a class="btn btn btn-info rounded-0" asp-action="ResetPassword" asp-route-id="@user.UserName">
+                            </a>
+                        <a data-toggle="tooltip" data-placement="top" title=" Reset Password" class="btn btn btn-info rounded-0" asp-action="ResetPassword" asp-route-id="@user.UserName">
                             <i class="fa fa-solid fa-edit"></i>
-                            Reset Password</a>
+                           </a>
                         <form method="post" asp-action="DeleteOneUser">
                             <input type="hidden" name="UserName" value="@user.UserName" />
-                            <button type="submit" class="btn btn-danger rounded-0">
+                            <button type="submit"  data-toggle="tooltip" data-placement="top" title="Delete" class="btn btn-danger rounded-0">
                                 <i class="fa fa-solid fa-trash"></i>
-                                Delete
+                                
                             </button>
                         </form>
                     </div>
