--- a/StoreApp/Areas/Admin/Views/Dashboard/Index.cshtml
+++ b/StoreApp/Areas/Admin/Views/Dashboard/Index.cshtml
@@ -1,2 +1,7 @@
-
-    <h3>Dashboard Index</h3>
+<div class="text-center my-5 border-bottom">
+    <div class="display-6">Dashboard</div>
+</div>
+   
+<div class="my-5">
+    <partial name="_Cards" />
+</div>
